--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -52,6 +53,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.479.0",
     "react": "^19.0.0",
     "react-day-picker": "^9.6.1",
@@ -59,9 +61,9 @@
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.3.0",
     "recharts": "^2.15.1",
-    "tailwind-merge": "^3.0.2",
-    "tailwindcss": "^4.0.12",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwind-merge": "^3.1.0",
+    "tailwindcss": "^4.1.1",
+    "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "3.2.5",
@@ -75,6 +77,7 @@
     "@storybook/react": "8.6.4",
     "@storybook/react-vite": "8.6.4",
     "@storybook/test": "8.6.4",
+    "@storybook/theming": "^8.6.12",
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
@@ -93,8 +96,8 @@
     "vite-plugin-dts": "^4.5.3"
   },
   "peerDependencies": {
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.3.0",
     "tailwindcss": "^4.0.12"
