--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,6 @@
         "@/*": ["lib/*"]
       }
     },
-    "include": ["lib"],
+    "include": ["lib", "docs"],
     "references": [{ "path": "./tsconfig.node.json" }]
   }
