--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     ".": {
       "import": "./dist/index.js"
     },
-    "./styles.css": {
-      "default": "./dist/aiqia-ui.css"
+    "./variables.css": {
+      "default": "./dist/variables.css"
     }
   },
   "files": [
@@ -56,7 +56,7 @@
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.479.0",
     "react": "^19.0.0",
-    "react-day-picker": "^9.6.1",
+    "react-day-picker": "^8.9.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.3.0",
@@ -93,7 +93,8 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0",
-    "vite-plugin-dts": "^4.5.3"
+    "vite-plugin-dts": "^4.5.3",
+    "vite-plugin-static-copy": "^2.3.1"
   },
   "peerDependencies": {
     "react": "^19.0.0",
