--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.479.0",
     "react": "^19.0.0",
-    "react-day-picker": "^8.9.1",
+    "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.3.0",
