--- a/package.json
+++ b/package.json
@@ -48,60 +48,60 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
-    "@tailwindcss/vite": "^4.0.12",
+    "@tailwindcss/vite": "^4.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.479.0",
-    "react": "^19.0.0",
+    "react": "^19.1.0",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.2",
-    "react-router-dom": "^7.3.0",
-    "recharts": "^2.15.1",
+    "react-router-dom": "^7.7.0",
+    "recharts": "^2.15.4",
     "tailwind-merge": "^3.1.0",
-    "tailwindcss": "^4.1.1",
+    "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "3.2.5",
     "@eslint/js": "^9.21.0",
-    "@storybook/addon-essentials": "8.6.4",
-    "@storybook/addon-interactions": "8.6.4",
+    "@storybook/addon-essentials": "8.6.14",
+    "@storybook/addon-interactions": "8.6.14",
     "@storybook/addon-onboarding": "8.6.4",
     "@storybook/addon-styling-webpack": "1.0.1",
     "@storybook/addon-themes": "8.6.4",
-    "@storybook/blocks": "8.6.4",
-    "@storybook/react": "8.6.4",
-    "@storybook/react-vite": "8.6.4",
-    "@storybook/test": "8.6.4",
-    "@storybook/theming": "^8.6.12",
+    "@storybook/blocks": "8.6.14",
+    "@storybook/react": "8.6.14",
+    "@storybook/react-vite": "8.6.14",
+    "@storybook/test": "8.6.14",
+    "@storybook/theming": "^8.6.14",
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
+    "@vitejs/plugin-react": "^4.7.0",
+    "eslint": "^9.31.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
     "eslint-plugin-storybook": "^0.11.4",
     "globals": "^15.15.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "storybook": "8.6.4",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "storybook": "8.6.14",
     "typescript": "~5.7.2",
-    "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0",
-    "vite-plugin-dts": "^4.5.3",
-    "vite-plugin-static-copy": "^2.3.1"
+    "typescript-eslint": "^8.38.0",
+    "vite": "^7.0.5",
+    "vite-plugin-dts": "^4.5.4",
+    "vite-plugin-static-copy": "^3.1.1"
   },
   "peerDependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.2",
-    "react-router-dom": "^7.3.0",
-    "tailwindcss": "^4.0.12"
+    "react-router-dom": "^7.7.0",
+    "tailwindcss": "^4.1.11"
   },
   "engines": {
     "node": ">=20"
@@ -110,6 +110,12 @@
   "eslintConfig": {
     "extends": [
       "plugin:storybook/recommended"
+    ]
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@tailwindcss/oxide",
+      "esbuild"
     ]
   }
 }
