--- a/package.json
+++ b/package.json
@@ -66,18 +66,12 @@
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "3.2.5",
+    "@chromatic-com/storybook": "^4.1.1",
     "@eslint/js": "^9.21.0",
-    "@storybook/addon-essentials": "8.6.14",
-    "@storybook/addon-interactions": "8.6.14",
-    "@storybook/addon-onboarding": "8.6.4",
-    "@storybook/addon-styling-webpack": "1.0.1",
-    "@storybook/addon-themes": "8.6.4",
-    "@storybook/blocks": "8.6.14",
-    "@storybook/react": "8.6.14",
-    "@storybook/react-vite": "8.6.14",
-    "@storybook/test": "8.6.14",
-    "@storybook/theming": "^8.6.14",
+    "@storybook/addon-onboarding": "9.1.3",
+    "@storybook/addon-styling-webpack": "^2.0.0",
+    "@storybook/addon-themes": "9.1.3",
+    "@storybook/react-vite": "9.1.3",
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
@@ -85,16 +79,17 @@
     "eslint": "^9.31.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "eslint-plugin-storybook": "^0.11.4",
+    "eslint-plugin-storybook": "^9.1.3",
     "globals": "^15.15.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "storybook": "8.6.14",
+    "storybook": "9.1.3",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.38.0",
     "vite": "^7.0.5",
     "vite-plugin-dts": "^4.5.4",
-    "vite-plugin-static-copy": "^3.1.1"
+    "vite-plugin-static-copy": "^3.1.2",
+    "@storybook/addon-docs": "9.1.3"
   },
   "peerDependencies": {
     "react": "^19.1.0",
