--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
   "scripts": {
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "storybook": "storybook dev -p 6007",
+    "build-storybook": "storybook build",
+    "cosmos": "cosmos"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.1",
@@ -55,11 +56,13 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.479.0",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.7.0",
+    "react-syntax-highlighter": "^15.6.6",
     "recharts": "^2.15.4",
     "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.1.11",
@@ -81,6 +84,7 @@
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react": "^4.7.0",
     "eslint": "^9.31.0",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -88,11 +92,14 @@
     "eslint-plugin-storybook": "^0.11.4",
     "globals": "^15.15.0",
     "react": "19.1.0",
+    "react-cosmos": "^7.0.0",
+    "react-cosmos-plugin-open-fixture": "^7.0.0",
+    "react-cosmos-plugin-vite": "^7.0.0",
     "react-dom": "19.1.0",
     "storybook": "8.6.14",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.38.0",
-    "vite": "^7.0.5",
+    "vite": "^7.1.4",
     "vite-plugin-dts": "^4.5.4",
     "vite-plugin-static-copy": "^3.1.1"
   },
