--- a/cosmos.config.json
+++ b/cosmos.config.json
@@ -1,9 +1,16 @@
 {
+  "$schema": "http://json.schemastore.org/cosmos-config",
   "plugins": [
+    "react-cosmos-plugin-boolean-input",
+    "react-cosmos-plugin-open-fixture",
     "react-cosmos-plugin-vite"
   ],
   "globalImports": [
-    "./lib/variables.css"
+    "lib/variables.css"
   ],
-  "staticPath": "public"
+  "ignore": [
+    "node_modules/**/*",
+    "dist/**/*",
+    "cosmos-export/**/*"
+  ]
 }
