--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "react-dom": "19.1.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.38.0",
-    "vite": "^7.1.4",
+    "vite": "^7.1.5",
     "vite-plugin-dts": "^4.5.4",
     "vite-plugin-static-copy": "^3.1.2"
   },
@@ -105,6 +105,9 @@
     "onlyBuiltDependencies": [
       "@tailwindcss/oxide",
       "esbuild"
-    ]
+    ],
+    "overrides": {
+      "prismjs": "1.30.0"
+    }
   }
 }
