--- a/package.json
+++ b/package.json
@@ -48,23 +48,13 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
-    "@tailwindcss/vite": "^4.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
-    "lucide-react": "^0.479.0",
-    "next-themes": "^0.4.6",
-    "react": "^19.1.0",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19.1.0",
-    "react-hook-form": "^7.54.2",
-    "react-router-dom": "^7.7.0",
-    "react-syntax-highlighter": "^15.6.6",
-    "recharts": "^2.15.4",
     "tailwind-merge": "^3.1.0",
-    "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
@@ -78,24 +68,34 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^15.15.0",
-    "react": "19.1.0",
+    "react": "^19.1.0",
     "react-cosmos": "^7.0.0",
     "react-cosmos-plugin-boolean-input": "^7.0.0",
     "react-cosmos-plugin-open-fixture": "^7.0.0",
     "react-cosmos-plugin-vite": "^7.0.0",
-    "react-dom": "19.1.0",
+    "react-syntax-highlighter": "^15.6.6",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.38.0",
     "vite": "^7.1.5",
     "vite-plugin-dts": "^4.5.4",
-    "vite-plugin-static-copy": "^3.1.2"
+    "vite-plugin-static-copy": "^3.1.2",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.54.2",
+    "react-router-dom": "^7.7.0",
+    "tailwindcss": "^4.1.11",
+    "next-themes": "^0.4.6",
+    "@tailwindcss/vite": "^4.1.11",
+    "lucide-react": "^0.479.0",
+    "recharts": "^2.15.4"
   },
   "peerDependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.7.0",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "lucide-react": "^0.479.0",
+    "recharts": "^2.15.4"
   },
   "engines": {
     "node": ">=20"
@@ -107,7 +107,9 @@
       "esbuild"
     ],
     "overrides": {
-      "prismjs": "1.30.0"
+      "prismjs": "1.30.0",
+      "react": "19.1.0",
+      "react-dom": "19.1.0"
     }
   }
 }
