--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@tailwindcss/vite": "^4.1.11",
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
@@ -68,34 +69,33 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^15.15.0",
+    "lucide-react": "^0.479.0",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-cosmos": "^7.0.0",
     "react-cosmos-plugin-boolean-input": "^7.0.0",
     "react-cosmos-plugin-open-fixture": "^7.0.0",
     "react-cosmos-plugin-vite": "^7.0.0",
-    "react-syntax-highlighter": "^15.6.6",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.38.0",
-    "vite": "^7.1.5",
-    "vite-plugin-dts": "^4.5.4",
-    "vite-plugin-static-copy": "^3.1.2",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.7.0",
+    "react-syntax-highlighter": "^15.6.6",
+    "recharts": "^2.15.4",
     "tailwindcss": "^4.1.11",
-    "next-themes": "^0.4.6",
-    "@tailwindcss/vite": "^4.1.11",
-    "lucide-react": "^0.479.0",
-    "recharts": "^2.15.4"
+    "typescript": "~5.7.2",
+    "typescript-eslint": "^8.38.0",
+    "vite": "^7.1.12",
+    "vite-plugin-dts": "^4.5.4",
+    "vite-plugin-static-copy": "^3.1.2"
   },
   "peerDependencies": {
+    "lucide-react": "^0.479.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.7.0",
-    "tailwindcss": "^4.1.11",
-    "lucide-react": "^0.479.0",
-    "recharts": "^2.15.4"
+    "recharts": "^2.15.4",
+    "tailwindcss": "^4.1.11"
   },
   "engines": {
     "node": ">=20"
