--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-    "@tailwindcss/vite": "^4.1.11",
+    "@tailwindcss/vite": "^4.1.18",
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
@@ -72,13 +72,13 @@
     "lucide-react": "^0.479.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
-    "react-cosmos": "^7.0.0",
-    "react-cosmos-plugin-boolean-input": "^7.0.0",
-    "react-cosmos-plugin-open-fixture": "^7.0.0",
-    "react-cosmos-plugin-vite": "^7.0.0",
+    "react-cosmos": "^7.1.1",
+    "react-cosmos-plugin-boolean-input": "^7.1.1",
+    "react-cosmos-plugin-open-fixture": "^7.1.1",
+    "react-cosmos-plugin-vite": "^7.1.1",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.2",
-    "react-router-dom": "^7.7.0",
+    "react-router-dom": "^7.13.0",
     "react-syntax-highlighter": "^15.6.6",
     "recharts": "^2.15.4",
     "tailwindcss": "^4.1.11",
@@ -109,7 +109,12 @@
     "overrides": {
       "prismjs": "1.30.0",
       "react": "19.1.0",
-      "react-dom": "19.1.0"
+      "react-dom": "19.1.0",
+      "@isaacs/brace-expansion": ">=5.0.1",
+      "qs": "6.14.2",
+      "lodash": "4.17.23",
+      "js-yaml": "4.1.1",
+    "ajv": "8.18.0"
     }
   }
 }
