--- a/cosmos.config.json
+++ b/cosmos.config.json
@@ -1,5 +1,8 @@
 {
   "$schema": "http://json.schemastore.org/cosmos-config",
+  "vite": {
+    "configPath": "vite.cosmos.config.js"
+  },
   "plugins": [
     "react-cosmos-plugin-boolean-input",
     "react-cosmos-plugin-open-fixture",
